@@ -17,6 +17,8 @@ check for syncing Google code to SourceForge.
 other scripts.
 * Removed extraneous trailing slash from scp command.
 * Updated sync script to remove gzip file when done.
+* Updated sync script with messages to stdout as well as the functionality of
+creating a local mirror if one does not already exist.
 
 2008.03.12
 
